--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <div class="infoCard" id="portfolioInfo">
                 <h1>PORTFOLIO</h1>
                 <h2>This is where my homeworks to learn the topic are located.</h2>
-                <img src="portfolio_pic.jpeg" alt="portfolioPic"></img>
+                <img src="images/portfolio_pic.jpeg" alt="portfolioPic"></img>
               </div>
             </a>
             <a href="project.html"><button type="button" id="projectButton">Project</button>
