--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="mainHome">
       <div class="mainHome__container">
         <video autoplay muted loop id="bg__video">
-          <source src="images/NetworkBackground.mp4" type="video/mp4">
+          <source src="NetworkBackground.mp4" type="video/mp4">
         </video>
         <div class="mainHome__content">
           <h1><i class="fa-solid fa-microchip"></i>DataScience</h1>
