--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
               <div class="infoCard" id="portfolioInfo">
                 <h1>PORTFOLIO</h1>
                 <h2>This is where my homeworks to learn the topic are located.</h2>
-                <img src="images/portfolio_pic.jpeg" alt="portfolioPic"></img>
+                <img src="portfolio_pic.jpeg" alt="portfolioPic"></img>
               </div>
             </a>
             <a href="project.html"><button type="button" id="projectButton">Project</button>
               <div class="infoCard" id="projectInfo">
                 <h1>PROJECT</h1>
                 <h2>This is where my final project is located discussing XYZ.</h2>
-                <img src="images/project pic.jpeg" alt="projectPic"></img>
+                <img src="project pic.jpeg" alt="projectPic"></img>
               </div>
             </a>
             <a href="https://rapidcharts.io/datascience" target="_blank"><button type="button" id="dscButton">DS Course</button>
               <div class="infoCard" id="dscInfo">
                 <h1>DATASCIENCE COURSE</h1>
                 <h2>This is a link to the University of Bristols data science course.</h2>
-                <img src="images/bristoluni_img.jpeg" alt="bristolUni"></img>
+                <img src="bristoluni_img.jpeg" alt="bristolUni"></img>
               </div>
             </a>
             <a href="/" target="_blank"><button type="button" id="ghButton">GitHub</button>
               <div class="infoCard" id="ghInfo">
                 <h1>GITHUB REPOSITORY</h1>
                 <h2>This is where the files used to encode the website are located.</h2>
-                <img src="images/software-computer-code-1940x900_35196.jpeg" alt="ghPic"></img>
+                <img src="software-computer-code-1940x900_35196.jpeg" alt="ghPic"></img>
               </div>
             </a>
           </div>
