--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@
     <div class="main">
       <div class="main__container">
         <video autoplay muted loop id="bg__video">
-          <source src="images/NetworkBackground.mp4" type="video/mp4">
+          <source src="NetworkBackground.mp4" type="video/mp4">
         </video>
           <div class="main__content">
             <div class="intro">
