--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="bristoluni_img.jpeg" alt="bristolUni"></img>
               </div>
             </a>
-            <a href="/" target="_blank"><button type="button" id="ghButton">GitHub</button>
+            <a href="https://github.com/JaydenLaw87/JaydenLaw87.github.io" target="_blank"><button type="button" id="ghButton">GitHub</button>
               <div class="infoCard" id="ghInfo">
                 <h1>GITHUB REPOSITORY</h1>
                 <h2>This is where the files used to encode the website are located.</h2>
