--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,8 @@
     vegaEmbed('#pc1', portChart1);
     var portChart2 = "portfolio_W1.2.json";
     vegaEmbed('#pc2', portChart2);
+    var portChart3 = "IMF_W2.1.json";
+    vegaEmbed('#pc3' = portChart3)
     </script>
   </head>
   <body>
@@ -86,7 +88,12 @@
           <div class="mySlides fade">
             <div class="infoCard" id="slideInfoCard">
             	<h2>Week 2</h2>
-              <p>LMFAO</p>
+              <div class="slideTable">
+                <div class="group">
+                  <h2>Chart 2: IMF Lending</h2>
+                  <div class="chart" id="pc3"></div>
+                  <p>IMF Lending chart</p>
+                </div>
             </div>
           </div>
 
