--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,12 @@
     vegaEmbed('#pc1', portChart1);
     var portChart2 = "portfolio_W1.2.json";
     vegaEmbed('#pc2', portChart2);
+    </script>
+    <script type="text/javascript">
     var portChart3 = "IMF_W2.1.json";
-    vegaEmbed('#pc3' = portChart3)
+    vegaEmbed('#pc3', portChart3);
+    var portChart4 = "IMF_W2.2.json";
+    vegaEmbed('#pc4', portChart4);
     </script>
   </head>
   <body>
@@ -87,13 +91,19 @@
 
           <div class="mySlides fade">
             <div class="infoCard" id="slideInfoCard">
-            	<h2>Week 2</h2>
+            	<h1>Week 2</h1>
               <div class="slideTable">
                 <div class="group">
-                  <h2>Chart 2: IMF Lending</h2>
+                  <h2>Chart 3: IMF Lending</h2>
                   <div class="chart" id="pc3"></div>
                   <p>IMF Lending chart</p>
                 </div>
+                <div class="group">
+                  <h2>Chart 4: IMF Lending Indexed</h2>
+                  <div class="chart" id="pc4"></div>
+                  <p>IMF Lending chart</p>
+                </div>
+              </div>
             </div>
           </div>
 
