--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,36 @@
     var portChart4 = "IMF_W2.2.json";
     vegaEmbed('#pc4', portChart4);
     </script>
+    <script type="text/javascript">
+    var portChart5 = "w3_chart.json";
+    vegaEmbed('#pc5', portChart5);
+    var portChart6 = "w3_Chart1.json";
+    vegaEmbed('#pc6', portChart6);
+    </script>
+    <script type="text/javascript">
+    var portChart7 = "rc_Chart.json";
+    vegaEmbed('#pc7', portChart7);
+    </script>
+    <script type="text/javascript">
+    var portChart8a = "data_ONS-P2E3_Chart.json";
+    vegaEmbed('#pc8a', portChart8a);
+    var portChart8b = "data_ONS-P2WU_Chart.json";
+    vegaEmbed('#pc8b', portChart8b);
+    var portChart8c = "data_ONS-P3LA_Chart.json";
+    vegaEmbed('#pc8c', portChart8c);
+    var portChart8d = "data_ONS-P3NC_Chart.json";
+    vegaEmbed('#pc8d', portChart8d);
+    var portChart8e = "data_ONS-P4BX_Chart.json";
+    vegaEmbed('#pc8e', portChart8e);
+    var portChart8f = "data_ONS-P4TG_Chart.json";
+    vegaEmbed('#pc8f', portChart8f);
+    var portChart8g = "data_ONS-P37A_Chart.json";
+    vegaEmbed('#pc8g', portChart8g);
+    var portChart8h = "data_ONS-P44L_Chart.json";
+    vegaEmbed('#pc8h', portChart8h);
+    var portChart8i = "data_ONS-P46J_Chart.json";
+    vegaEmbed('#pc8i', portChart8i);
+    </script>
   </head>
   <body>
     <nav class="navbar">
@@ -109,22 +139,68 @@
 
           <div class="mySlides fade">
             <div class="infoCard" id="slideInfoCard">
-            	<h2>Week 3</h2>
-              <p>Pahahah</p>
+              <h1>Week 3</h1>
+              <div class="slideTable" id="candle">
+                <div class="group">
+                  <h2>Chart 5: APPL Stock Bar Chart</h2>
+                  <div class="chart" id="pc5"></div>
+                  <p>The above shows the Apple stock price with red or green indicating whether or not the close of the current day is higher or lower than the previous day</p>
+                </div>
+                <div class="group">
+                  <h2>Chart 6: APPL Candlestick Chart</h2>
+                  <div class="chart" id="pc6"></div>
+                  <p>This is an improved graph, utilising candlesticks to show more data including, day open and close as well as day high and low.</p>
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="mySlides fade">
             <div class="infoCard" id="slideInfoCard">
-            	<h2>Week 4</h2>
-              <p>Im bored</p>
+              <h1>Week 4</h1>
+              <div class="slideTable">
+                <div class="group">
+                  <h2>Chart 7: Rugby Championship Performance Chart</h2>
+                  <div class="chart" id="pc7"></div>
+                  <p>Wowzers</p>
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="mySlides fade">
             <div class="infoCard" id="slideInfoCard">
-            	<h2>Week 5</h2>
-              <p>five and drive</p>
+              <h1>Week 5</h1>
+              <h2>A dashboard showing the value of UK imports and exports of different goods:</h2>
+              <div class="slideTable" id="dash">
+                <div class="group">
+                  <div class="chart" id="pc8a"></div>
+                </div>
+                <div class="group">
+                  <div class="chart" id="pc8b"></div>
+                </div>
+                <div class="group">
+                  <div class="chart" id="pc8c"></div>
+                </div>
+                <div class="group">
+                  <div class="chart" id="pc8d"></div>
+                </div>
+                <div class="group">
+                  <div class="chart" id="pc8e"></div>
+                </div>
+                <div class="group">
+                  <div class="chart" id="pc8f"></div>
+                </div>
+                <div class="group">
+                  <div class="chart" id="pc8g"></div>
+                </div>
+                <div class="group">
+                  <div class="chart" id="pc8h"></div>
+                </div>
+                <div class="group">
+                  <div class="chart" id="pc8i"></div>
+                </div>
+              </div>
             </div>
           </div>
 
