--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
     vegaEmbed('#pc8i', portChart8i);
     </script>
     <script type="text/javascript">
-    var portChart9 = "Map1.json";
+    var portChart9 = "map1.json";
     vegaEmbed('#pc9', portChart9);
     var portChart10 = "Map2.json;
     vegaEmbed('#pc10', portChart10);
