--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     <script type="text/javascript">
     var portChart9 = "map1.json";
     vegaEmbed('#pc9', portChart9);
-    var portChart10 = "Map2.json;
+    var portChart10 = "Map2.json";
     vegaEmbed('#pc10', portChart10);
     </script>
   </head>
