--- a/portfolio.html
+++ b/portfolio.html
@@ -129,11 +129,11 @@
             <div class="infoCard" id="slideInfoCard">
             	<h1>Week 2</h1>
               <div class="slideTable">
-                <div class="group">
+                <container class="group">
                   <h2>Chart 3: IMF Lending</h2>
                   <div class="chart" id="pc3"></div>
                   <p>IMF Lending chart</p>
-                </div>
+                </container>
                 <div class="group">
                   <h2>Chart 4: IMF Lending Indexed</h2>
                   <div class="chart" id="pc4"></div>
