--- a/project.html
+++ b/project.html
@@ -21,7 +21,7 @@
       vegaEmbed('#pro2', proC2);
       var proC3 = "projectG3.json";
       vegaEmbed('#pro3', proC3);
-      var proC4 = "proG4.json";
+      var proC4 = "projectG4.json";
       vegaEmbed('#pro4', proC4);
       var proC5 = "proG5.json";
       vegaEmbed('#pro5', proC5);
