--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
       vegaEmbed('#pro1', proC1);
       var proC2 = "projectG2.json";
       vegaEmbed('#pro2', proC2);
-      var proC3 = "projectG3.json";
+      var proC3 = "proG3.json";
       vegaEmbed('#pro3', proC3);
       var proC4 = "projectG4.json";
       vegaEmbed('#pro4', proC4);
