--- a/project.html
+++ b/project.html
@@ -20,9 +20,9 @@
       var proC2 = "projectG2.json";
       vegaEmbed('#pro2', proC2);
       var proC3 = "proG3.json";
-      vegaEmbed('#pro3', proC3);
+      vegaEmbed('#proj3', proC3);
       var proC4 = "projectG4.json";
-      vegaEmbed('#pro4', proC4);
+      vegaEmbed('#proj4', proC4);
       var proC5 = "proG5.json";
       vegaEmbed('#pro5', proC5);
       var proC7 = "proG7.json";
