--- a/project.html
+++ b/project.html
@@ -82,10 +82,10 @@
           <div class="chart" id="pro2"></div>
           <a href="https://colab.research.google.com/drive/1RFwTIKcQTXu7QK86sdF1VNnbHVJQz-8Z" target="_blank">Google Colab 2</a>
           <p>The data suggests that certain sectors, such as financials and TMT, have consistently seen higher levels of M&A activity, while others, such as agriculture and construction, had less activity. It's also noteworthy that some sectors, such as pharma, medical, and biotech, have seen increased activity post-COVID after an initial drop. Defence saw the largest proportional drop during Covid.</p>
-          <div class="chart" id="pro3"></div>
+          <div class="chart" id="proj3"></div>
           <a href="https://colab.research.google.com/drive/1Qfz57Td7EJ4alxJVuo0PBCC65t23YrsW" target="_blank">Google Colab 3</a>
           <p>Comparied to the previous visualisation, sectors with a higher representation in public markets, such as industrials and TMT, tend towards higher levels of M&A activity. Sectors with smaller market representation, such as real estate and financials, have less M&A activity. Key note- M&A activity is influenced by other factors.</p>
-          <div class="chart" id="pro4"></div>
+          <div class="chart" id="proj4"></div>
           <div class="chart" id="pro5"></div>
           <a href="https://colab.research.google.com/drive/1wqfxkPHXk8S0A9jtggI_wlx2cC6XfYTo#scrollTo=2Y9UYTkgftwq" target="_blank">Google Colab 4/5</a>
           <p>Both the above visualisations include a regression line showing the trend of M&A deals over time. The first visualisation shows a slight increase in M&A deal values post-COVID, while the second visualisation shows a steadier trend of deal values pre-COVID, indicating Covid-19s potential positive impact on individual deal value.</p>
