--- a/project.html
+++ b/project.html
@@ -23,8 +23,8 @@
       vegaEmbed('#proj3', proC3);
       var proC4 = "projectG4.json";
       vegaEmbed('#proj4', proC4);
-      var proC5 = "proG5.json";
-      vegaEmbed('#pro5', proC5);
+      var proC5 = "projectG5.json";
+      vegaEmbed('#proj5', proC5);
       var proC7 = "proG7.json";
       vegaEmbed('#pro7', proC7);
     </script>
@@ -86,7 +86,7 @@
           <a href="https://colab.research.google.com/drive/1Qfz57Td7EJ4alxJVuo0PBCC65t23YrsW" target="_blank">Google Colab 3</a>
           <p>Comparied to the previous visualisation, sectors with a higher representation in public markets, such as industrials and TMT, tend towards higher levels of M&A activity. Sectors with smaller market representation, such as real estate and financials, have less M&A activity. Key note- M&A activity is influenced by other factors.</p>
           <div class="chart" id="proj4"></div>
-          <div class="chart" id="pro5"></div>
+          <div class="chart" id="proj5"></div>
           <a href="https://colab.research.google.com/drive/1wqfxkPHXk8S0A9jtggI_wlx2cC6XfYTo#scrollTo=2Y9UYTkgftwq" target="_blank">Google Colab 4/5</a>
           <p>Both the above visualisations include a regression line showing the trend of M&A deals over time. The first visualisation shows a slight increase in M&A deal values post-COVID, while the second visualisation shows a steadier trend of deal values pre-COVID, indicating Covid-19s potential positive impact on individual deal value.</p>
           <img src="ProG6.png" alt="proG6Pic" width="300" height="400"></img>
