--- a/project.html
+++ b/project.html
@@ -21,9 +21,9 @@
       vegaEmbed('#pro2', proC2);
       var proC3 = "proG3.json";
       vegaEmbed('#proj3', proC3);
-      var proC4 = "projectG4.json";
+      var proC4 = "ProjectG4.json";
       vegaEmbed('#proj4', proC4);
-      var proC5 = "projectG5.json";
+      var proC5 = "ProjectG5.json";
       vegaEmbed('#proj5', proC5);
       var proC7 = "proG7.json";
       vegaEmbed('#pro7', proC7);
